classDiagram
    direction LR

    class Room {
        +string id
        +string number
        +string type
        +number floor
        +number base_price
        +RoomStatus status
        +string image_url
        +number custom_type_id
        +CustomRoomType custom_room_types
    }

    class CustomRoomType {
        +number id
        +string name
        +string description
        +number base_price
        +number max_occupancy
        +any amenities
        +boolean is_active
    }

    class Guest {
        +string id
        +string full_name
        +string email
        +string phone
        +string id_number
        +string nationality
        +string user_id
    }

    class Reservation {
        +string id
        +string booking_id
        +string booking_reference
        +string guest_id
        +string room_id
        +string check_in
        +string check_out
        +number adults
        +number children
        +number room_rate
        +number total_amount
        +ReservationStatus status
        +string payment_status
        +boolean breakfast_included
        +string actual_check_in
        +string actual_check_out
    }

    class Invoice {
        +number id
        +string invoice_number
        +string reservation_id
        +string guest_id
        +number subtotal
        +number tax_amount
        +number service_charge
        +number discount_amount
        +number total_amount
        +string status
        +string payment_method
        +string created_by
    }

    class BillingItem {
        +number id
        +string reservation_id
        +string room_id
        +string guest_id
        +string item_name
        +string category
        +number quantity
        +number unit_price
        +number total_price
        +string status
        +string service_date
    }

    class Deposit {
        +number id
        +number reservation_id
        +number amount
        +string payment_method
        +string status
        +string collected_at
        +string refunded_at
        +string collected_by
        +string refunded_by
    }

    class Profile {
        +string id
        +string user_id
        +string employee_id
        +string full_name
        +string email
        +string role
        +string department
        +boolean is_active
        +any permissions
    }

    class Role {
        +string id
        +string name
        +string display_name
        +any permissions
    }

    class UserRole {
        +string id
        +string user_id
        +string role_id
        +string assigned_by
        +string assigned_at
    }

    class HousekeepingTask {
        +number id
        +string room_id
        +number staff_id
        +TaskType task_type
        +string title
        +TaskStatus status
        +TaskPriority priority
        +number estimated_duration
        +string started_at
        +string completed_at
    }

    class Payment {
        +string id
        +string reservation_id
        +number amount
        +string payment_method
        +string payment_date
        +string status
        +string transaction_id
    }

    class GuestFacilityRequest {
        +number id
        +number guest_id
        +number reservation_id
        +number room_id
        +string service_type
        +string priority
        +string status
        +number total_cost
        +GuestFacilityItem[] items
    }

    class InventoryItem {
        +number id
        +string name
        +string category
        +number current_stock
        +number min_stock
        +number unit_cost
    }

    class Expense {
        +number id
        +string expense_date
        +string category
        +number amount
        +string description
        +string vendor
        +string status
    }

    class ChatMessage {
        +string id
        +string chat_id
        +string role
        +any content
        +string created_at
    }

    Room "1" *-- "1" CustomRoomType : has
    Reservation "*" --> "1" Guest : booked by
    Reservation "*" --> "1" Room : assigned
    Invoice "*" --> "1" Reservation : invoices
    BillingItem "*" --> "1" Reservation : line item
    BillingItem "*" --> "1" Room : optional
    BillingItem "*" --> "1" Guest : billed
    Deposit "*" --> "1" Reservation : holds
    Payment "*" --> "1" Reservation : settles
    HousekeepingTask "*" --> "1" Room : target
    GuestFacilityRequest "*" --> "1" Reservation : requested
    GuestFacilityRequest "1" *-- "*" GuestFacilityRequestItem : contains
    Profile "1" -- "*" UserRole : assigned
    Role "1" -- "*" UserRole : grants
    Profile ..> Invoice : creates
    Profile ..> Deposit : handles

    class GuestFacilityRequestItem {
        +number id
        +number request_id
        +string item_name
        +number quantity
        +number unit_price
    }

    note for Reservation "Status enum:\npending, confirmed,\nchecked-in, checked-out,\ncancelled"
    note for HousekeepingTask "task_type:\ndaily, deep,\ncheckout, special"
    note for Role "6 roles:\nsuper_admin, manager,\nfront_desk, housekeeping,\nfinance, guest"
